# DeepLearningVWAP

./: README.md  pyproject.toml
.github/workflows/: dvwap_ci.yml
dvwap/: __init__.py  data_formater.py  deep_static_vwap.py  dynamic_standard_vwap.py
tests/: test_jax.py  test_tensorflow.py  test_torch.py
